# IDC606

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py  run_scaling_analysis.py  run_svd_analysis.py
docs/: README.md  physical_vs_informational.md  theory.md
notebooks/: graphcast_spectral_analysis.ipynb
spectral_entropy/: __init__.py  entropy.py  extractor.py  mesh.py  power_law.py  scaling.py  singular_value.py  visualize.py
spectral_entropy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_pipeline.py
